--- a/src/components/FeedbackForm.astro
+++ b/src/components/FeedbackForm.astro
@@ -4,8 +4,8 @@
   <p>Here's an example of a Netlify Form! When you fill this out, the submissions can be found in the Netlify Admin site.</p>
   <div class="feedback-form">
       <form
-        netlify
-        netlify-honeypot
+        data-netlify="true"
+        data-netlify-honeypot="bot-field"
         name="feedback"
         method="POST"
         action="/success"
@@ -56,4 +56,3 @@ button {
   width: 1px;
 }
 </style>
-
